# chorale-project

./: .editorconfig  .gitignore  .gitmodules  Makefile  README.md  i18n.config.js  nuxt.config.js  package-lock.json  package.json  tailwind.config.js
.github/workflows/: release.yaml  stage.yaml
annotations/: bach-modulations.json
chorale-search/: .gitignore  CMakeLists.txt  Makefile  deps.json
chorale-search/cli/: add-modulations.cpp  chorale-search.cpp
chorale-search/scripts/: fetch-deps.sh
chorale-search/src/: AttributeMatcher.cpp  AttributeMatcher.hpp  CorpusSearch.cpp  CorpusSearch.hpp  HumdrumChorale.cpp  HumdrumChorale.hpp  JsonIO.cpp  JsonIO.hpp  Query.hpp  Result.hpp  VoiceMap.cpp  VoiceMap.hpp
chorale-search/tests/: test_attributematcher.cpp  test_cli.cpp  test_corpussearch.cpp  test_fixture_results.cpp  test_framework.hpp  test_humdrumchorale.cpp  test_jsonio.cpp  test_voicemap.cpp
chorale-search/tests/fixtures/: chor001.krn  chor006.krn  chor009.krn  chor029.krn
chorale-webapp/: content.config.ts  nuxt.config.ts  package-lock.json  package.json
chorale-webapp/app/: app.config.ts
content/: bach-outer-voices.yaml
content/bach-370-chorales/: chor001.yaml  chor002.yaml  chor003.yaml  chor004.yaml  chor005.yaml  chor006.yaml  chor007.yaml  chor008.yaml  chor009.yaml  chor010.yaml  chor011.yaml  chor012.yaml  chor013.yaml  chor014.yaml  chor015.yaml  chor016.yaml  chor017.yaml  chor018.yaml  chor019.yaml  chor020.yaml  chor021.yaml  chor022.yaml  chor023.yaml  chor024.yaml  chor025.yaml  chor026.yaml  chor027.yaml  chor028.yaml  chor029.yaml  chor030.yaml  chor031.yaml  chor032.yaml  chor033.yaml  chor034.yaml  chor035.yaml  chor036.yaml  chor037.yaml  chor038.yaml  chor039.yaml  chor040.yaml  (+330 more)
content/bach-cadences/: chor001-10.yaml  chor001-19.yaml  chor001-28.yaml  chor001-40.yaml  chor001-52.yaml  chor001-61.yaml  chor001.yaml  chor002-15.yaml  chor002-23.yaml  chor002-29.yaml  chor002-39.yaml  chor002-49.yaml  chor002-7.yaml  chor002.yaml  chor003-15.yaml  chor003-23.yaml  chor003-31.yaml  chor003-39.yaml  chor003-7.yaml  chor003.yaml  chor004-15.yaml  chor004-23.yaml  chor004-31.yaml  chor004-39.yaml  chor004-7.yaml  chor004.yaml  chor005-15.yaml  chor005-23.yaml  chor005-31.yaml  chor005-39.yaml  chor005-47.yaml  chor005-55.yaml  chor005-67.yaml  chor005-7.yaml  chor005.yaml  chor006-13.yaml  chor006-23.yaml  chor006-29.yaml  chor006-7.yaml  chor006.yaml  (+2605 more)
content/bach-phrases/: chor001-10.yaml  chor001-19.yaml  chor001-28.yaml  chor001-40.yaml  chor001-52.yaml  chor001-61.yaml  chor002-15.yaml  chor002-23.yaml  chor002-29.yaml  chor002-39.yaml  chor002-49.yaml  chor002-7.yaml  chor003-15.yaml  chor003-23.yaml  chor003-31.yaml  chor003-39.yaml  chor003-7.yaml  chor004-15.yaml  chor004-23.yaml  chor004-31.yaml  chor004-39.yaml  chor004-7.yaml  chor005-15.yaml  chor005-23.yaml  chor005-31.yaml  chor005-39.yaml  chor005-47.yaml  chor005-55.yaml  chor005-67.yaml  chor005-7.yaml  chor006-13.yaml  chor006-23.yaml  chor006-29.yaml  chor006-7.yaml  chor007-10.yaml  chor007-109.yaml  chor007-22.yaml  chor007-34.yaml  chor007-43.yaml  chor007-55.yaml  (+2238 more)
content/bach-segments/: 3-beats.json  4-beats.json
content/kittel-24-chorales/: 01-gott-des-himmels-und-der-erden.yaml  02-allein-gott-in-der-hoeh.yaml  03-nun-freut-euch-liebe-christengemein.yaml  04-herr-jesu-christ-dich-zu-uns.yaml  05-herr-gott-dich-loben-alle-wir.yaml  06-jesus-meine-zuversicht.yaml  07-nun-lasst-uns-gott-den-herren.yaml
content/schiorring-choral-bog/: 001-ach-herre-from.yaml  002-af-adams-fald-er-plat-forderv-t.yaml  003-af-dybeste-nod-lader-os-til-gud.yaml  004-af-dybeste-nod-raaber-jeg-til-dig.yaml  005-af-hoyheden-oprunden-er.yaml  006-af-kierlighed-min-ven.yaml  007-alleene-til-dig-herre-jesu-christ.yaml  008-alleeneste-gud-i-himmerig.yaml  009-bryd-jesu-bryd-det-aag.yaml  010-christus-kom-selv-til-jordans-flod.yaml  011-den-lyse-dag-forgangen-er.yaml  012-den-praegtig-soel-som-heele-verden-glaeder.yaml  013-den-som-mig-foder-det-er-gud-min-herre.yaml  014-du-hoye-fryd-for-reene-siele.yaml  015-eet-er-nodigt-dette-eene.yaml  016-et-barn-er-fod-i-bethlehem.yaml  017-et-lidet-barn-saa-lysteligt.yaml  018-et-troefast-hierte-o-herre-min.yaml  019-fader-vor-udi-himmerig.yaml  020-fra-himmelen-hoyt-komme-vi-nu-her.yaml  021-frisk-op-min-siel-forsage-ey.yaml  022-fryd-dig-du-christi-brud.yaml  023-gud-fader-udi-himmerig.yaml  024-gud-give-vor-konning.yaml  025-guds-godhed-ville-vi-prise.yaml  026-guds-son-er-kommen-af-himmelen-ned.yaml  027-helligste-jesu-helligheds-kilde.yaml  028-herre-christ-gud-faders-eenbaarne-son.yaml  029-herre-jesu-christ-min-frelser-du.yaml  030a-herre-jesu-christ-sand-menneske.yaml  030b-en-anden-melodie.yaml  031-hielp-gud-at-jeg-nu-kunde.yaml  032-hiertelig-mig-nu-l-youges.yaml  033-hvad-kan-os-komme-til-for-nod.yaml  (+68 more)
scripts/: index.mjs
(+28366 files in other folders)
